--- a/packages/stress/package.json
+++ b/packages/stress/package.json
@@ -8,7 +8,7 @@
         "build-esbuild": "bun esbuild.config.mjs",
         "demo": "node --enable-source-maps ./dist/demo.cjs",
         "generate-wallets": "node --enable-source-maps ./dist/generateWallets.cjs",
-        "lint": "eslint . --ext .ts",
+        "lint": "oxlint src --type-aware",
         "nft": "node --enable-source-maps ./dist/nft.cjs",
         "notifications": "node --enable-source-maps ./dist/notifications.cjs",
         "start": "node --enable-source-maps ./dist/start.cjs",
@@ -42,10 +42,7 @@
     "devDependencies": {
         "@types/debug": "^4.1.8",
         "@types/node": "^20.14.8",
-        "@typescript-eslint/eslint-plugin": "^8.29.0",
-        "@typescript-eslint/parser": "^8.29.0",
         "esbuild": "^0.25.9",
-        "eslint": "^8.57.1",
         "eslint-import-resolver-typescript": "^4.3.2",
         "eslint-plugin-import-x": "^4.10.2",
         "eslint-plugin-jest": "^27.2.3",
