--- a/packages/towns-bot-cli/package.json
+++ b/packages/towns-bot-cli/package.json
@@ -6,8 +6,8 @@
     "scripts": {
         "build": "tsup",
         "dev": "tsx src/index.ts",
-        "lint": "eslint src --ext .ts",
-        "lint:fix": "eslint src --ext .ts --fix",
+        "lint": "oxlint src --type-aware",
+        "lint:fix": "oxlint src --type-aware --fix",
         "watch": "tsup --watch"
     },
     "bin": "index.js",
@@ -32,9 +32,6 @@
         "@types/minimist": "^1.2.5",
         "@types/node": "^20.14.8",
         "@types/prompts": "^2.4.9",
-        "@typescript-eslint/eslint-plugin": "^8.29.0",
-        "@typescript-eslint/parser": "^8.29.0",
-        "eslint": "^8.57.1",
         "eslint-import-resolver-typescript": "^4.3.2",
         "eslint-plugin-import-x": "^4.10.2",
         "tsup": "^8.3.5",
