--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "csb:turbo": "bash -c 'bun run turbo run build test:ci $(bun run csb:list:filter)'",
         "csb:turbo-no-sdk": "bash -c 'bun run turbo run build test:ci $(bun run csb:list:filter-without-sdk)'",
         "lint": "turbo lint",
+        "postinstall": "husky install",
+        "prepare": "husky install",
         "prettier:check": "prettier --check .",
         "prettier:fix": "prettier --write .",
         "syncpack:check": "syncpack list-mismatches",
@@ -44,9 +46,6 @@
         "dotenv": "^17.2.3",
         "dotenv-cli": "^10.0.0",
         "@types/node": "^20.14.8",
-        "eslint": "^8.57.1",
-        "eslint-config-prettier": "^10.1.2",
-        "eslint-plugin-prettier": "^5.2.6",
         "lint-staged": "^13.1.2",
         "prettier": "^3.5.3",
         "prettier-plugin-solidity": "^1.4.2",
@@ -56,14 +55,17 @@
         "ts-node": "^10.9.1",
         "turbo": "^2.6.3",
         "typescript": "~5.8.3",
+        "vite-plugin-oxlint": "^1.3.5",
         "vite-plugin-wasm": "^3.4.1",
         "vitest": "^3.2.3",
         "wait-on": "^7.0.1"
     },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
     "lint-staged": {
-        "*.{js,mdx,ts,tsx}": [
-            "eslint --fix"
-        ],
         "*.{json,yml}": [
             "prettier --write"
         ]
