--- a/packages/bot/.oxlintrc.json
+++ b/packages/bot/.oxlintrc.json
@@ -1,25 +1,11 @@
 {
-    "root": true,
-    "extends": [
-        "eslint:recommended",
-        "plugin:import-x/recommended",
-        "plugin:import-x/typescript",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:@typescript-eslint/recommended-requiring-type-checking",
-        "plugin:prettier/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": { "project": ["./tsconfig.json"] },
-    "plugins": ["@typescript-eslint", "import-x", "eslint-plugin-tsdoc"],
-    "ignorePatterns": ["dist/**", ".turbo/**", "node_modules/**", "vitest.*"],
+    "$schema": "https://oxc.rs/schemas/oxlintrc.json",
+    "plugins": ["typescript", "import", "unicorn"],
+    "env": {
+        "node": true
+    },
     "rules": {
         "no-console": "error",
-        "import-x/no-extraneous-dependencies": [
-            "error",
-            {
-                "packageDir": "."
-            }
-        ],
         "@typescript-eslint/require-await": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-unsafe-assignment": "off",
@@ -28,8 +14,7 @@
             "error",
             {
                 "argsIgnorePattern": "^_",
-                "destructuredArrayIgnorePattern": "^_",
-                "caughtErrors": "none"
+                "destructuredArrayIgnorePattern": "^_"
             }
         ],
         "@typescript-eslint/restrict-template-expressions": [
@@ -48,8 +33,7 @@
                 "allow": ["arrowFunctions"]
             }
         ],
-        "@typescript-eslint/ban-ts-comment": "off",
-        "tsdoc/syntax": "warn"
+        "@typescript-eslint/ban-ts-comment": "off"
     },
     "overrides": [
         {
@@ -57,8 +41,7 @@
             "rules": {
                 "@typescript-eslint/no-unsafe-call": "off",
                 "@typescript-eslint/no-non-null-assertion": "off",
-                "@typescript-eslint/no-unsafe-argument": "off",
-                "tsdoc/syntax": "off"
+                "@typescript-eslint/no-unsafe-argument": "off"
             }
         }
     ]
