--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "build": "tsc",
         "clean": "rm -rf dist",
-        "lint": "eslint --format unix ./src --max-warnings=0",
+        "lint": "oxlint src --type-aware",
         "lint:fix": "bun run lint --fix",
         "test": "vitest",
         "test:ci:multi:ent": "vitest run --silent=passed-only",
@@ -37,12 +37,8 @@
         "@hono/node-server": "^1.14.0",
         "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "^20.14.8",
-        "@typescript-eslint/eslint-plugin": "^8.29.0",
-        "@typescript-eslint/parser": "^8.29.0",
-        "eslint": "^8.57.1",
         "eslint-import-resolver-typescript": "^4.3.2",
         "eslint-plugin-import-x": "^4.10.2",
-        "eslint-plugin-tsdoc": "^0.3.0",
         "fake-indexeddb": "^6.0.1",
         "hono": "^4.7.11",
         "nanoid": "^4.0.0",
