--- a/packages/examples/bot-quickstart/package.json
+++ b/packages/examples/bot-quickstart/package.json
@@ -8,8 +8,8 @@
         "build": "tsc --noEmit",
         "clean": "rm -rf dist",
         "dev": "bun run --watch src/index.ts",
-        "lint": "eslint --format unix ./src  --max-warnings=0",
-        "lint:fix": "eslint --format unix ./src  --max-warnings=0 --fix",
+        "lint": "oxlint src --type-aware",
+        "lint:fix": "oxlint src --type-aware --fix",
         "start": "bun run src/index.ts",
         "typecheck": "tsc --noEmit"
     },
@@ -24,12 +24,8 @@
     "devDependencies": {
         "@types/bun": "^1.3.1",
         "@types/node": "^20.14.8",
-        "@typescript-eslint/eslint-plugin": "^8.29.0",
-        "@typescript-eslint/parser": "^8.29.0",
-        "eslint": "^8.57.1",
         "eslint-import-resolver-typescript": "^4.3.2",
         "eslint-plugin-import-x": "^4.10.2",
-        "eslint-plugin-tsdoc": "^0.3.0",
         "typescript": "~5.8.3"
     },
     "files": [
