--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -7,7 +7,7 @@
         "build": "tsc && vite build",
         "dev": "vite",
         "dev:local": "bun run load-env vite",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "lint": "oxlint src --type-aware",
         "load-env": "dotenv -e ../generated/deployments/local_dev/.env.vite --",
         "preview": "vite preview"
     },
@@ -57,12 +57,9 @@
         "@types/node": "^20.14.8",
         "@types/react": "^19.1.16",
         "@types/react-dom": "^19.1.7",
-        "@typescript-eslint/eslint-plugin": "^8.29.0",
-        "@typescript-eslint/parser": "^8.29.0",
         "@vitejs/plugin-react-swc": "^3.10.2",
         "autoprefixer": "^10.4.19",
         "dotenv-cli": "^10.0.0",
-        "eslint": "^8.57.1",
         "eslint-import-resolver-typescript": "^4.3.2",
         "eslint-plugin-import-x": "^4.10.2",
         "eslint-plugin-react": "^7.32.2",
