--- a/packages/rpc-connector/package.json
+++ b/packages/rpc-connector/package.json
@@ -8,7 +8,7 @@
         "build": "tsdown",
         "cb": "bun run clean && bun run build",
         "clean": "rm -rf dist",
-        "lint": "eslint --format unix ./src  --max-warnings=0",
+        "lint": "oxlint src --type-aware",
         "lint:fix": "bun run lint --fix",
         "test": "vitest",
         "test:ci": "echo 'CI test skipped'",
@@ -22,12 +22,8 @@
         "@connectrpc/connect-node": "^2.1.0",
         "@connectrpc/connect-web": "^2.1.0",
         "@types/node": "^20.14.8",
-        "@typescript-eslint/eslint-plugin": "^8.29.0",
-        "@typescript-eslint/parser": "^8.29.0",
-        "eslint": "^8.57.1",
         "eslint-import-resolver-typescript": "^4.3.2",
         "eslint-plugin-import-x": "^4.10.2",
-        "eslint-plugin-tsdoc": "^0.3.0",
         "tsdown": "^0.12.3",
         "typescript": "~5.8.3",
         "vitest": "^3.2.3"
