--- a/packages/sdk-crypto/tsconfig.json
+++ b/packages/sdk-crypto/tsconfig.json
@@ -8,7 +8,7 @@
         "rootDir": "./src",
         "outDir": "./dist",
         "experimentalDecorators": true,
-        "types": ["vitest/globals"]
+        "types": ["node", "vitest/globals"]
     },
     "include": ["./src/**/*"]
 }
