--- a/packages/stream-metadata/package.json
+++ b/packages/stream-metadata/package.json
@@ -13,8 +13,8 @@
 		"dev:omega": "RIVER_ENV=omega ENVIRONMENT=omega BASE_CHAIN_RPC_URL=https://mainnet.base.org RIVER_CHAIN_RPC_URL=https://mainnet.rpc.river.build PORT=3002 RIVER_STREAM_METADATA_BASE_URL=http://localhost:3002 bun run run-build",
 		"dev": "bun run dev:local_dev",
 		"kill:local_dev": "kill -9 $(lsof -t -i:3002)",
-		"lint:fix": "eslint . --ext .ts --fix",
-		"lint": "eslint . --ext .ts",
+		"lint:fix": "oxlint src --type-aware --fix",
+		"lint": "oxlint src --type-aware",
 		"prettier": "prettier --config ../prettier-config/config.js --ignore-path .prettierignore .",
 		"run-build": "bun run build && bun ./dist/node_esbuild.cjs",
 		"start": "bun ./dist/node_esbuild.cjs",
@@ -55,11 +55,8 @@
 		"@towns-protocol/utils": "workspace:^",
 		"@types/node": "^20.14.8",
 		"@types/uuid": "^10.0.0",
-		"@typescript-eslint/eslint-plugin": "^8.29.0",
-		"@typescript-eslint/parser": "^8.29.0",
 		"axios": "^1.9.0",
 		"esbuild": "^0.25.9",
-		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^10.1.2",
 		"eslint-import-resolver-typescript": "^4.3.2",
 		"eslint-plugin-import-x": "^4.10.2",
