--- a/packages/stream-metadata/tsconfig.json
+++ b/packages/stream-metadata/tsconfig.json
@@ -10,7 +10,7 @@
 		"outDir": "./dist",
 		"rootDir": "./src",
 		"sourceMap": true,
-		"types": ["vitest/globals"]
+		"types": ["node", "vitest/globals"]
 	},
 	"include": ["src/**/*.ts"],
 	"exclude": ["node_modules", "dist", "tests"]
