--- a/packages/web3/package.json
+++ b/packages/web3/package.json
@@ -8,7 +8,7 @@
         "build": "tsc",
         "cb": "bun run clean && bun run build",
         "clean": "rm -rf dist",
-        "lint": "eslint --format unix ./src",
+        "lint": "oxlint src --type-aware",
         "lint:fix": "bun run lint --fix",
         "test": "vitest run",
         "test:ci": "vitest run --silent=passed-only",
@@ -31,10 +31,7 @@
     },
     "devDependencies": {
         "@types/node": "^20.14.8",
-        "@typescript-eslint/eslint-plugin": "^8.29.0",
-        "@typescript-eslint/parser": "^8.29.0",
         "debug": "^4.3.4",
-        "eslint": "^8.57.1",
         "eslint-import-resolver-typescript": "^4.3.2",
         "eslint-plugin-import-x": "^4.10.2",
         "typed-emitter": "^2.1.0",
