--- a/packages/web3/tsconfig.eslint.json
+++ b/packages/web3/tsconfig.eslint.json
@@ -1,7 +1,7 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
-        "types": ["vitest/globals"]
+        "types": ["node", "vitest/globals"]
     },
     "rules": {
         "@typescript-eslint/unbound-method": [
