--- a/packages/web3/tsconfig.json
+++ b/packages/web3/tsconfig.json
@@ -1,8 +1,9 @@
 {
     "extends": "./../tsconfig.base.json",
     "compilerOptions": {
-        "baseUrl": "./src" /* Specify the root folder within your source files. */,
-        "outDir": "./dist" /* Specify an output folder for all emitted files. */
+        "rootDir": "./src" /* Specify the root folder within your source files. */,
+        "outDir": "./dist" /* Specify an output folder for all emitted files. */,
+        "types": ["node", "vitest/globals"]
     },
     "include": ["src/**/*"]
 }
