--- a/packages/xchain-monitor/tsconfig.json
+++ b/packages/xchain-monitor/tsconfig.json
@@ -4,7 +4,7 @@
         "rootDir": "./src" /* Specify the root folder within your source files. */,
         "outDir": "./dist" /* Specify an output folder for all emitted files. */,
         "experimentalDecorators": true,
-        "types": ["vitest/globals"]
+        "types": ["node", "vitest/globals"]
     },
     "include": ["./src/**/*"]
 }
