feat: integrate ENS contracts and deploy L2 registrar functionality
### Changes
- Added `ens-contracts` dependency to `package.json` and `remappings.txt`.
- Implemented `L2RegistrarFacet` for managing name registrations on L2.
- Created `IL2Registry` and `IL2Resolver` interfaces for L2 interactions.
- Introduced deployment scripts for the registrar and its facets.
- Added a new JSON file for registrar contract address.

### Checklist
- [x] New features implemented
- [x] Documentation updated where applicable
- [x] Changes adhere to the repository's contribution guidelines

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -25,6 +25,7 @@
     "account-abstraction": "github:eth-infinitism/account-abstraction#v0.7.0",
     "crypto-lib": "github:towns-protocol/crypto-lib#v1.0.1",
     "modular-account": "github:towns-protocol/modular-account#v1.0.0",
+    "ens-contracts": "github:ensdomains/ens-contracts#v1.6.0",
     "solady": "^0.1.24"
   },
   "devDependencies": {
