--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -25,7 +25,8 @@
     "account-abstraction": "github:eth-infinitism/account-abstraction#v0.7.0",
     "crypto-lib": "github:towns-protocol/crypto-lib#v1.0.1",
     "modular-account": "github:towns-protocol/modular-account#v1.0.0",
-    "solady": "^0.1.26"
+    "solady": "^0.1.26",
+    "ens-contracts": "github:ensdomains/ens-contracts#v1.6.0"
   },
   "devDependencies": {
     "@layerzerolabs/lz-evm-messagelib-v2": "^3.0.112",
