Fix subgraph dockerfile for changes to Bun (#4727)
### Description


[This](https://github.com/towns-protocol/towns/commit/3c3154c5963e8225726e459aeab098a3175ee70d)
recent change converting from yarn to bun broke the subgraph docker
build step by removing a build step for subgraph dependencies.
Additionally, the way bun links packages broke for SubscriptionFacet
which had not been added to the wagmi config. This Pr fixes both issues
and the docker build. Tested by running the newly built image locally
and noticed absence of any critical runtime errors on startup.

--- a/packages/subgraph/Dockerfile
+++ b/packages/subgraph/Dockerfile
@@ -74,7 +74,10 @@ COPY packages/web3 ./packages/web3/
 COPY protocol ./protocol/
 
 # Build all packages using turbo
-RUN bun run turbo typings --filter=@towns-protocol/subgraph...
+# First generate contract typings (web3 imports from @towns-protocol/contracts/typings)
+RUN bun run turbo typings --filter=@towns-protocol/contracts
+# Then build all dependencies (web3, utils, generated, etc.)
+RUN bun run turbo build --filter=@towns-protocol/subgraph...
 
 # Prepare subgraph for runtime
 RUN chmod +x ./packages/subgraph/docker-entrypoint.sh
