add prettier config as dep

--- a/packages/ccip/package.json
+++ b/packages/ccip/package.json
@@ -11,6 +11,7 @@
         "prettier:check": "bun run prettier --check ."
     },
     "devDependencies": {
+        "@towns-protocol/prettier-config": "workspace:^",
         "@types/bun": "latest",
         "prettier": "^3.7.4",
         "typescript": "^5.9.3"
