--- a/packages/ccip/package.json
+++ b/packages/ccip/package.json
@@ -12,9 +12,9 @@
     },
     "devDependencies": {
         "@towns-protocol/prettier-config": "workspace:^",
-        "@types/bun": "latest",
-        "prettier": "^3.7.4",
-        "typescript": "^5.9.3"
+        "@types/bun": "^1.3.1",
+        "prettier": "^3.5.3",
+        "typescript": "~5.8.3"
     },
     "dependencies": {
         "@wagmi/cli": "^2.2.0",
