refactor CCIP handler to improve error handling and validation for decoded function data; update tsconfig to allow emitting output

--- a/packages/ccip/tsconfig.json
+++ b/packages/ccip/tsconfig.json
@@ -9,9 +9,8 @@
         "allowJs": true,
         // Bundler mode
         "moduleResolution": "bundler",
-        "allowImportingTsExtensions": true,
         "verbatimModuleSyntax": true,
-        "noEmit": true,
+        "noEmit": false,
         // Best practices
         "strict": true,
         "skipLibCheck": true,
