add format on save for go files
because jesus help me if i fail another lint check in ci

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,10 @@
         "editor.renderWhitespace": "all"
     },
     "go.formatTool": "custom",
+    "[go]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "golang.go"
+    },
     "go.testFlags": ["-v", "-tags", "integration"],
     "go.buildTags": "integration",
     "typescript.tsdk": "node_modules/typescript/lib",
