--- a/packages/web3/package.json
+++ b/packages/web3/package.json
@@ -25,6 +25,7 @@
         "ethers": "^5.8.0",
         "lru-cache": "^11.0.1",
         "nanoid": "^4.0.0",
+        "superjson": "^2.2.2",
         "viem": "^2.29.3",
         "zod": "^3.25.76"
     },
