--- a/packages/web3/.eslintrc.json
+++ b/packages/web3/.eslintrc.json
@@ -20,6 +20,7 @@
                 "packageDir": "."
             }
         ],
+        "import-x/no-named-as-default-member": "off",
         "@typescript-eslint/require-await": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-unsafe-assignment": "off",
