--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "csb:test-remote": "bun run --filter @towns-protocol/sdk test",
         "csb:turbo": "bash -c 'bun run turbo run build test:ci $(bun run csb:list:filter)'",
         "csb:turbo-no-sdk": "bash -c 'bun run turbo run build test:ci $(bun run csb:list:filter-without-sdk)'",
-        "lint": "turbo lint",
+        "lint": "oxlint . --ignore-path .oxlintignore",
+        "lint:fix": "oxlint . --fix --ignore-path .oxlintignore",
         "postinstall": "husky install",
         "prepare": "husky install",
         "prettier:check": "prettier --check .",
