--- a/packages/encryption/.oxlintrc.json
+++ b/packages/encryption/.oxlintrc.json
@@ -10,6 +10,8 @@
     "@typescript-eslint/require-await": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-unnecessary-parameter-property-assignment": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
@@ -34,12 +36,11 @@
         "allow": ["arrowFunctions"]
       }
     ],
-    "@typescript-eslint/ban-ts-comment": "off",
-    "@typescript-eslint/no-unnecessary-parameter-property-assignment": "off"
+    "@typescript-eslint/ban-ts-comment": "off"
   },
   "overrides": [
     {
-      "files": ["**/*.test.*"],
+      "files": ["**/*.test.*", "**/*.test_util.*"],
       "rules": {
         "@typescript-eslint/no-unsafe-call": "off",
         "@typescript-eslint/no-floating-promises": "off",
