--- a/packages/playground/.oxlintrc.json
+++ b/packages/playground/.oxlintrc.json
@@ -7,6 +7,7 @@
     "es6": true
   },
   "rules": {
+    "no-console": "off",
     "curly": "warn",
     "@typescript-eslint/no-base-to-string": "error",
     "@typescript-eslint/no-unused-vars": ["warn", { "args": "none" }],
@@ -18,6 +19,17 @@
       "error",
       {
         "groups": ["external", "internal"]
+      }
+    ],
+    "no-restricted-imports": [
+      "error",
+      {
+        "patterns": [
+          {
+            "group": ["**/dist/*", "**/dist/**/*"],
+            "message": "Please use proper paths for imports."
+          }
+        ]
       }
     ],
     "sort-imports": [
