--- a/packages/stream-metadata/.oxlintrc.json
+++ b/packages/stream-metadata/.oxlintrc.json
@@ -10,6 +10,7 @@
     "@typescript-eslint/require-await": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
@@ -38,12 +39,13 @@
   },
   "overrides": [
     {
-      "files": ["tests/**/*.ts"],
+      "files": ["**/*.test.*", "**/*.test_util.*"],
       "rules": {
+        "no-console": "off",
         "@typescript-eslint/no-unsafe-call": "off",
+        "@typescript-eslint/no-floating-promises": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
-        "@typescript-eslint/no-unsafe-argument": "off",
-        "no-console": "off"
+        "@typescript-eslint/no-unsafe-argument": "off"
       }
     }
   ]
