--- a/packages/examples/bot-quickstart/.oxlintrc.json
+++ b/packages/examples/bot-quickstart/.oxlintrc.json
@@ -6,6 +6,7 @@
   },
   "rules": {
     "no-console": "off",
+    "import/no-extraneous-dependencies": "error",
     "@typescript-eslint/require-await": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-unsafe-assignment": "off",
@@ -14,7 +15,8 @@
       "error",
       {
         "argsIgnorePattern": "^_",
-        "destructuredArrayIgnorePattern": "^_"
+        "destructuredArrayIgnorePattern": "^_",
+        "caughtErrors": "none"
       }
     ],
     "@typescript-eslint/restrict-template-expressions": [
@@ -34,15 +36,15 @@
       }
     ],
     "@typescript-eslint/ban-ts-comment": "off"
- 
   },
   "overrides": [
     {
       "files": ["**/*.test.*", "**/*.test_util.*"],
       "rules": {
         "@typescript-eslint/no-unsafe-call": "off",
+        "@typescript-eslint/no-floating-promises": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
-        "@typescript-eslint/no-unsafe-argument": "off",
+        "@typescript-eslint/no-unsafe-argument": "off"
       }
     }
   ]
