--- a/packages/react-sdk/.oxlintrc.json
+++ b/packages/react-sdk/.oxlintrc.json
@@ -7,6 +7,7 @@
     "es6": true
   },
   "rules": {
+    "no-console": "warn",
     "curly": "warn",
     "@typescript-eslint/no-base-to-string": "error",
     "@typescript-eslint/no-unused-vars": ["warn", { "args": "none" }],
