--- a/packages/sdk/.oxlintrc.json
+++ b/packages/sdk/.oxlintrc.json
@@ -51,15 +51,15 @@
       }
     ],
     "@typescript-eslint/ban-ts-comment": "off"
- 
   },
   "overrides": [
     {
       "files": ["**/*.test.*", "**/*.test_util.*"],
       "rules": {
         "@typescript-eslint/no-unsafe-call": "off",
+        "@typescript-eslint/no-floating-promises": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
-        "@typescript-eslint/no-unsafe-argument": "off",
+        "@typescript-eslint/no-unsafe-argument": "off"
       }
     }
   ]
