--- a/packages/utils/.oxlintrc.json
+++ b/packages/utils/.oxlintrc.json
@@ -9,6 +9,7 @@
     "@typescript-eslint/require-await": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
@@ -37,7 +38,7 @@
   },
   "overrides": [
     {
-      "files": ["**/*.test.*"],
+      "files": ["**/*.test.*", "**/*.test_util.*"],
       "rules": {
         "@typescript-eslint/no-unsafe-call": "off",
         "@typescript-eslint/no-floating-promises": "off",
