--- a/.github/workflows/Publish_npm_packages.yml
+++ b/.github/workflows/Publish_npm_packages.yml
@@ -5,8 +5,6 @@ on:
     push:
         branches:
             - main
-        paths:
-            - '.changeset/**'
     workflow_dispatch: # Allows manual triggering
 
 jobs:
@@ -28,6 +26,7 @@ jobs:
               uses: actions/checkout@v4
               with:
                   ref: main
+                  fetch-depth: 0
 
             - name: Install GPG
               run: |
@@ -82,26 +81,20 @@ jobs:
                   npm whoami || (echo "Not logged in to npm registry" && exit 1)
 
             - name: Install dependencies
-              run: yarn install --immutable
+              run: bun install --frozen-lockfile
 
             - name: Build packages
-              run: yarn build
+              run: bun run build
 
             - name: Generate contract types
-              run: yarn workspace @towns-protocol/generated build-types
-
-            - name: Generate react-sdk docs
-              run: yarn workspace @towns-protocol/react-sdk gen
-
-            - name: Copy deployment addresses
-              run: ./packages/generated/scripts/copy-addresses.sh
+              run: bun --filter @towns-protocol/generated run build-types
 
             - name: Create Release PR or Publish
               id: changesets
               uses: changesets/action@v1
               with:
-                  version: yarn changeset:version
-                  publish: yarn changeset:publish
+                  version: sh -c "bun run changeset:version && bun --filter @towns-protocol/react-sdk run gen && ./packages/generated/scripts/copy-addresses.sh"
+                  publish: bun run changeset:publish
                   title: 'chore: Version Packages'
                   commit: 'chore: Version Packages'
               env:
@@ -110,7 +103,7 @@ jobs:
 
             - name: Push tags
               if: steps.changesets.outputs.published == 'true'
-              run: git push --follow-tags
+              run: git push origin --tags
 
             - name: Published packages info
               if: steps.changesets.outputs.published == 'true'
