--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "syncpack:fix": "syncpack fix-mismatches && syncpack format",
         "test": "turbo test",
         "test:build": "turbo test:build",
-        "test:unit": "turbo test:unit -- --silent",
+        "test:unit": "turbo test:unit",
         "changeset": "changeset",
         "changeset:version": "changeset version",
         "changeset:publish": "changeset publish"
@@ -46,7 +46,6 @@
         "eslint": "^8.57.1",
         "eslint-config-prettier": "^10.1.2",
         "eslint-plugin-prettier": "^5.2.6",
-        "husky": "^9.1.4",
         "lint-staged": "^13.1.2",
         "prettier": "^3.5.3",
         "prettier-plugin-solidity": "^1.4.2",
