--- a/packages/create-towns-protocol-app/.oxlintrc.json
+++ b/packages/create-towns-protocol-app/.oxlintrc.json
@@ -1,14 +1,10 @@
 {
-  "$schema": "https://oxc.rs/schemas/oxlintrc.json",
-  "plugins": [
-    "typescript",
-    "import",
-    "unicorn"
-  ],
-  "env": {
-    "node": true
-  },
-  "rules": {
-    "no-console": "off"
-  }
+    "$schema": "https://oxc.rs/schemas/oxlintrc.json",
+    "plugins": ["typescript", "import", "unicorn"],
+    "env": {
+        "node": true
+    },
+    "rules": {
+        "no-console": "off"
+    }
 }
