--- a/packages/playground/.oxlintrc.json
+++ b/packages/playground/.oxlintrc.json
@@ -1,63 +1,60 @@
 {
-  "$schema": "https://oxc.rs/schemas/oxlintrc.json",
-  "plugins": ["typescript", "react", "import", "unicorn"],
-  "env": {
-    "browser": true,
-    "node": true,
-    "es6": true
-  },
-  "rules": {
-    "no-console": "off",
-    "curly": "warn",
-    "@typescript-eslint/no-base-to-string": "error",
-    "@typescript-eslint/no-unused-vars": ["warn", { "args": "none" }],
-    "no-unused-vars": "off",
-    "import/no-named-as-default-member": "off",
-    "import/no-rename-default": "off",
-    "import/no-cycle": "warn",
-    "import/order": [
-      "error",
-      {
-        "groups": ["external", "internal"]
-      }
-    ],
-    "no-restricted-imports": [
-      "error",
-      {
-        "patterns": [
-          {
-            "group": ["**/dist/*", "**/dist/**/*"],
-            "message": "Please use proper paths for imports."
-          }
+    "$schema": "https://oxc.rs/schemas/oxlintrc.json",
+    "plugins": ["typescript", "react", "import", "unicorn"],
+    "env": {
+        "browser": true,
+        "node": true,
+        "es6": true
+    },
+    "rules": {
+        "no-console": "off",
+        "curly": "warn",
+        "@typescript-eslint/no-base-to-string": "error",
+        "@typescript-eslint/no-unused-vars": ["warn", { "args": "none" }],
+        "no-unused-vars": "off",
+        "import/no-named-as-default-member": "off",
+        "import/no-rename-default": "off",
+        "import/no-cycle": "warn",
+        "import/order": [
+            "error",
+            {
+                "groups": ["external", "internal"]
+            }
+        ],
+        "no-restricted-imports": [
+            "error",
+            {
+                "patterns": [
+                    {
+                        "group": ["**/dist/*", "**/dist/**/*"],
+                        "message": "Please use proper paths for imports."
+                    }
+                ]
+            }
+        ],
+        "sort-imports": [
+            "warn",
+            {
+                "ignoreCase": false,
+                "ignoreDeclarationSort": true,
+                "ignoreMemberSort": false
+            }
+        ],
+        "react/display-name": "off",
+        "react/jsx-boolean-value": ["warn", "never"],
+        "react/jsx-curly-brace-presence": ["error", { "props": "never", "children": "ignore" }],
+        "react/jsx-wrap-multilines": "error",
+        "react/no-array-index-key": "error",
+        "react/no-multi-comp": "off",
+        "react/prop-types": "off",
+        "react/self-closing-comp": "warn",
+        "react/jsx-sort-props": [
+            "warn",
+            {
+                "shorthandFirst": true,
+                "callbacksLast": true,
+                "noSortAlphabetically": true
+            }
         ]
-      }
-    ],
-    "sort-imports": [
-      "warn",
-      {
-        "ignoreCase": false,
-        "ignoreDeclarationSort": true,
-        "ignoreMemberSort": false
-      }
-    ],
-    "react/display-name": "off",
-    "react/jsx-boolean-value": ["warn", "never"],
-    "react/jsx-curly-brace-presence": [
-      "error",
-      { "props": "never", "children": "ignore" }
-    ],
-    "react/jsx-wrap-multilines": "error",
-    "react/no-array-index-key": "error",
-    "react/no-multi-comp": "off",
-    "react/prop-types": "off",
-    "react/self-closing-comp": "warn",
-    "react/jsx-sort-props": [
-      "warn",
-      {
-        "shorthandFirst": true,
-        "callbacksLast": true,
-        "noSortAlphabetically": true
-      }
-    ]
-  }
+    }
 }
