--- a/package.json
+++ b/package.json
@@ -28,20 +28,24 @@
         "syncpack:fix": "syncpack fix-mismatches && syncpack format",
         "test": "turbo test",
         "test:build": "turbo test:build",
-        "test:unit": "turbo test:unit"
+        "test:unit": "turbo test:unit",
+        "changeset": "changeset",
+        "changeset:version": "changeset version",
+        "changeset:publish": "changeset publish"
     },
     "dependencies": {
         "pino-pretty": "^13.0.0"
     },
     "devDependencies": {
         "@arethetypeswrong/cli": "^0.15.3",
+        "@changesets/changelog-github": "^0.5.2",
+        "@changesets/cli": "^2.29.8",
         "dotenv": "^17.2.3",
         "dotenv-cli": "^10.0.0",
         "@types/node": "^20.14.8",
         "eslint": "^8.57.1",
         "eslint-config-prettier": "^10.1.2",
         "eslint-plugin-prettier": "^5.2.6",
-        "lerna": "^8.1.3",
         "lint-staged": "^13.1.2",
         "prettier": "^3.5.3",
         "prettier-plugin-solidity": "^1.4.2",
