fix: changeset to use github-api for commits

--- a/.github/workflows/Publish_npm_packages.yml
+++ b/.github/workflows/Publish_npm_packages.yml
@@ -95,8 +95,9 @@ jobs:
               with:
                   version: bun run changeset:version:full
                   publish: bun run changeset:publish
-                  title: 'chore: Version Packages'
-                  commit: 'chore: Version Packages'
+                  title: 'Version Packages'
+                  commit: 'Version Packages'
+                  commitMode: github-api
               env:
                   GITHUB_TOKEN: ${{ secrets.RIVER_GITHUB_PAT }}
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
