dont let changeset setup git user for commits

--- a/.github/workflows/Publish_npm_packages.yml
+++ b/.github/workflows/Publish_npm_packages.yml
@@ -97,7 +97,7 @@ jobs:
                   publish: bun run changeset:publish
                   title: 'Version Packages'
                   commit: 'Version Packages'
-                  commitMode: github-api
+                  setupGitUser: false
               env:
                   GITHUB_TOKEN: ${{ secrets.RIVER_GITHUB_PAT }}
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
