--- a/packages/examples/bot-quickstart/.oxlintrc.json
+++ b/packages/examples/bot-quickstart/.oxlintrc.json
@@ -7,11 +7,11 @@
     "rules": {
         "no-console": "off",
         "import/no-extraneous-dependencies": "error",
-        "@typescript-eslint/require-await": "off",
-        "@typescript-eslint/no-explicit-any": "off",
-        "@typescript-eslint/no-unsafe-assignment": "off",
-        "@typescript-eslint/no-non-null-assertion": "off",
-        "@typescript-eslint/no-unused-vars": [
+        "typescript/require-await": "off",
+        "typescript/no-explicit-any": "off",
+        "typescript/no-unsafe-assignment": "off",
+        "typescript/no-non-null-assertion": "off",
+        "typescript/no-unused-vars": [
             "error",
             {
                 "argsIgnorePattern": "^_",
@@ -19,7 +19,7 @@
                 "caughtErrors": "none"
             }
         ],
-        "@typescript-eslint/restrict-template-expressions": [
+        "typescript/restrict-template-expressions": [
             "error",
             {
                 "allowNever": true,
@@ -29,22 +29,22 @@
                 "allowNullish": true
             }
         ],
-        "@typescript-eslint/no-empty-function": [
+        "typescript/no-empty-function": [
             "error",
             {
                 "allow": ["arrowFunctions"]
             }
         ],
-        "@typescript-eslint/ban-ts-comment": "off"
+        "typescript/ban-ts-comment": "off"
     },
     "overrides": [
         {
             "files": ["**/*.test.*", "**/*.test_util.*"],
             "rules": {
-                "@typescript-eslint/no-unsafe-call": "off",
-                "@typescript-eslint/no-floating-promises": "off",
-                "@typescript-eslint/no-non-null-assertion": "off",
-                "@typescript-eslint/no-unsafe-argument": "off"
+                "typescript/no-unsafe-call": "off",
+                "typescript/no-floating-promises": "off",
+                "typescript/no-non-null-assertion": "off",
+                "typescript/no-unsafe-argument": "off"
             }
         }
     ]
