--- a/packages/playground/.oxlintrc.json
+++ b/packages/playground/.oxlintrc.json
@@ -9,8 +9,8 @@
     "rules": {
         "no-console": "off",
         "curly": "warn",
-        "@typescript-eslint/no-base-to-string": "error",
-        "@typescript-eslint/no-unused-vars": ["warn", { "args": "none" }],
+        "typescript/no-base-to-string": "error",
+        "typescript/no-unused-vars": ["warn", { "args": "none" }],
         "no-unused-vars": "off",
         "import/no-named-as-default-member": "off",
         "import/no-rename-default": "off",
