ci: disable react-sdk docgen

--- a/.github/workflows/Publish_npm_packages.yml
+++ b/.github/workflows/Publish_npm_packages.yml
@@ -93,7 +93,7 @@ jobs:
               id: changesets
               uses: changesets/action@v1
               with:
-                  version: bun run changeset:version:full
+                  version: bun run changeset:version:no-docgen
                   publish: bun run changeset:publish
                   title: 'Version Packages'
                   commit: 'Version Packages'
